01-springboot/BondPricing/k8s/deploy2.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "3"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"bondpricer"},"name":"bondpricer","namespace":"bondpricer"},"spec":{"replicas":2,"selector":{"matchLabels":{"app":"bondpricer"}},"template":{"metadata":{"labels":{"app":"bondpricer"}},"spec":{"containers":[{"args":["-XX:+PrintFlagsFinal","-jar","app.jar"],"command":["java"],"env":[{"name":"JAVA_OPTS","value":"-XshowSettings:vm  -XX:UseCGroupMemoryLimitForHeap"}],"image":"ghcr.io/nelvadas/bondpricing: [...]
      prometheus.io/path: /actuator/prometheus
      prometheus.io/port: "8080"
      prometheus.io/scrape: "true"
    creationTimestamp: "2024-07-08T15:40:16Z"
    generation: 9
    labels:
      app: bondpricer
    name: bondpricer
    namespace: bondpricer-spring-jit
    resourceVersion: "82591730"
  spec:
    progressDeadlineSeconds: 600
    replicas: 2
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: bondpricer
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: bondpricer
      spec:
        containers:
        - args:
          - -XX:+PrintFlagsFinal
          - -jar
          - app.jar
          command:
          - java
          image: ghcr.io/nelvadas/bondpricing:2.0.0-spring-jit-openjdk23
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /health/liveness
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          name: bondpricer
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health/readiness
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 2
    conditions:
    - lastTransitionTime: "2024-07-08T15:40:16Z"
      lastUpdateTime: "2024-07-10T09:07:37Z"
      message: ReplicaSet "bondpricer-6dbc687488" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2025-02-11T12:36:39Z"
      lastUpdateTime: "2025-02-11T12:36:39Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    observedGeneration: 9
    readyReplicas: 2
    replicas: 2
    updatedReplicas: 2
kind: List
metadata:
  resourceVersion: ""
