01-springboot/BondPricing/k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/path: /actuator/prometheus
    prometheus.io/port: "8080"
    prometheus.io/scrape: "true"
  name: bondpricer-svc
  namespace: bondpricer-spring-jit
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: bondpricer
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
