01-springboot/BondPricing/k8s/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
    generation: 5
    name: bondpricer-ing
    namespace: bondpricer-spring-jit
  spec:
    ingressClassName: nginx
    rules:
    - host: bondpricer.spring.jit.8d94414f.nip.io
      http:
        paths:
        - backend:
            service:
              name: bondpricer-svc
              port:
                number: 8080
          path: /
          pathType: Prefix
kind: List
metadata:
  resourceVersion: ""
